cscope (15.7a-3.1) unstable; urgency=low

  [ Jari Aalto ]
  * Non-maintainer upload.
  * debian/copyright
    - Point to GPL-2. Use FSF URL (Lintian).
  * debian/control
    - (cscope::Description): Fix french hyphens.
    - (cscope-el::Description): Extend description.
  * debian/{cscope,cscope-el}.preinst
    - Add "set -e".
  * debian/cscope-indexer.1
    - Fix hyphens.
  * debian/patches
    - (Number 04): Refresh patch. Fix also hyphens in manpage.
  * debian/ocs.1
    - Fix hyphens and spelling.
  * debian/rules
    - (clean): Add rm for config.log.

  [ Hideki Yamane (Debian-JP) <henrich@debian.or.jp> ]
  * debian/control
    - (Package::cscope-el): New. separete emacs lisp to cscope-el package
      (Closes: #565727).
  * debian/cscope-el.{emacsen-install,emacsen-remove,install,preinst}
    - New files.

 -- Jari Aalto <jari.aalto@cante.net>  Sat, 08 May 2010 11:53:40 +0300

cscope (15.7a-3) unstable; urgency=low

  * Depend on emacsen-common to be able to install xcscope.el correctly
    (Closes: #562550).
  * Add ${misc:Depends} to Depends field in control (this fixes a lintian
    warning).
  * Fix spelling error in ocs.1 manpage (this fixes a lintian warning).

 -- Tobias Klauser <tklauser@distanz.ch>  Wed, 13 Jan 2010 18:08:30 +0100

cscope (15.7a-2) unstable; urgency=low

  * Correctly install and remove emacs library file (closes: #515164). Thanks
    to Benoit Izac for the patch.
  * Update handling of config.{guess,sub} in debian/rules according to the
    autotools-dev README.Debian. This fixes a lintian warning.
  * Add README.source file (text taken from
    /usr/share/doc/dpatch/README.source)
  * Update to Standards-Version 3.8.3

 -- Tobias Klauser <tklauser@distanz.ch>  Wed, 21 Oct 2009 13:57:34 +0200

cscope (15.7a-1) unstable; urgency=high

  * New upstream release.
    - Security update for CVE-2009-0148 to fix multiple buffer overflows
      (Closes: #528510).
    - Drop 01-fix-resize-crash-inside-vim.dpatch, merged upstream.