@@ -2,7 +2,7 @@ Source: cscope
 Section: devel
 Priority: optional
 Maintainer: Tobias Klauser <tklauser@distanz.ch>
-Build-Depends: debhelper (>= 7), dpatch, autotools-dev, bison, flex, libncurses5-dev
+Build-Depends: debhelper (>= 7.1), autotools-dev, bison, flex, libncurses5-dev
 Standards-Version: 3.8.4
 Homepage: http://cscope.sourceforge.net
 Vcs-Git: http://git.distanz.ch/scm/debian/pkg-cscope.git
